--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
       <img src="images/image-qr-code.png" alt="qr code">
         <h1>Improve your front-end <br> skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding  to the next level</p>
-    </main>
-
-    <footer class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
-      Coded by <a href="#">Elson Jr. Dev</a>
-    </footer>
+    </main>    
   </section>
-
-  
+  <main class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
+    Coded by <a href="#">Elson Jr. Dev</a>
+  </main>
   
 </body>
 </html>
