--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </main>    
   </section>
   <main class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
-    Coded by <a href="#">Elson Jr. Dev</a>
+     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Challenge by - Frontend Mentor</a>. <br>
+    <a href="#"> Coded by - Elson Jr. Dev</a>
   </main>
   
 </body>
