--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 
 <body>
-  <section>
-    <main>
+  <main class="container">
+    <section class="componets">
       <img src="images/image-qr-code.png" alt="qr code">
         <h1>Improve your front-end <br> skills by building projects</h1>
-        <p>Scan the QR code to visit Frontend Mentor and take your coding  to the next level</p>
-    </main>    
-  </section>
-  <main class="attribution">
+        <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to<br>  the next level</p>
+    </section>    
+  </main>
+  <footer class="attribution">
      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Challenge by - Frontend Mentor</a>. <br>
     <a href="#"> Coded by - Elson Jr. Dev</a>
-  </main>
+  </footer>
   
 </body>
 </html>
